--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             <input type="text" name="search_query" placeholder="Pesquisar" id="search">
             <input type="submit" value="pesquisar">
 
-            <label for="search" class="lupa">
-            <img src="./assets/icons8-teclado-30.png" width="20"></label>
+            <!-- <label for="search">
+            <img src="./assets/icons8-teclado-30.png" width="20" id="search"></label> -->
         </form>
+        
+        <label for="search">
+            <img src="./assets/icons8-teclado-30.png" width="20" id="search"></label>
+
          
             <img src="./assets/icons8-usuário-homem-com-círculo.png" class="icons-inputs login" id="login">
 
