--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
         <form method="GET" action="https://www.youtube.com/results">
 
             <input type="text" name="search_query" placeholder="Pesquisar" id="search">
-            <input type="submit" value="pesquisar">
+            <input type="submit" value="">
 
-            <label for="search"><img src="./assets/icons8-teclado-30.png" width="20"></label>
+            <label for="search"><img src="./assets/icons8-teclado-30.png" width="20" class="keyboard"></label>
+
+            <img src="./assets/icons8-microfone-30.png" id="micro">
         </form>
 
-        <!-- <label for="search"> -->
-            <!-- <img src="./assets/icons8-teclado-30.png" width="20" id="search"></label> -->
 
-
-        <img src="./assets/icons8-usuário-homem-com-círculo.png" class="icons-inputs login" id="login">
 
         <img src="./assets/icons8-tres-pontos.png" class="icons-inputs pontos" id="pontos">
 
-        <img src="./assets/icons8-microfone-30.png" class="icons-inputs micro" id="micro">
+        <div id="login">
 
+            <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
+            <b>FAZER LOGIN</b></div>
+
+        </div>
 
 
 
