add video ao projeto

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <!-- IMAGEN DO VIDEO -->
         <section>
 
+            <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="300" controls autoplay muted poster="./images/iron_maiden.jpg"></video>
+
             <h3></h3>
             <p></p>
 
