--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- IMAGEN DO VIDEO -->
         <section>
 
-            <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="60%" controls poster="./images/iron_maiden.jpg"></video>
+            <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="90%" controls poster="./images/iron_maiden.jpg" preload="auto"></video>
 
             <h3></h3>
             <p></p>
