textos e imagens da section finalizados

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div id="login">
 
             <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
+               <!-- nao esqucer de colocar o link -->
             <b>FAZER LOGIN</b></div>
 
         </div>
@@ -49,15 +50,26 @@
 
     </header>
 
-    <!-- CONTEÚDO -->
+    
     <div id="conteiner">
-        <!-- IMAGEN DO VIDEO -->
+               <!-- CONTEÚDO -->     
         <section>
+            <!-- VIDEO -->
 
             <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="90%" controls poster="./images/iron_maiden.jpg" preload="auto"></video>
 
-            <h3></h3>
-            <p></p>
+            <h3>Iron Maiden - Run To The Hills (Official Videos)</h3>
+
+            <p>46.198.588</p>
+
+            <div class="icons">
+                <img src="./assets/icons8-polegar-para-cima.png" width="25px" alt="curtir"><b class="b">295MIL</b>
+                <img src="./assets/icons8-polegar-para-baixo.png" width="25px" alt="não gostei"><b class="b">NÃO GOSTEI</b>
+                <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b class="b">COMPARTILHAR</b>
+
+            </div>
+
+
 
 
 
@@ -73,20 +85,14 @@
         </section>
 
 
-        <!-- RODAPÉ -->
-        <footer>
 
+            
+        <footer>
+                <!-- RODAPÉ -->
 
         </footer>
 
     </div>
-
-
-
-
-
-
-
 
 
 </body>
