--- a/index.html
+++ b/index.html
@@ -69,32 +69,29 @@
 
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </section>
+                </section>
 
 
 
             
         <footer>
                 <!-- RODAPÉ -->
+            <hr size="1px">
+            <img id="logo" src="./images/logo-iron.jpg" width="90px"><b class=" name iron">Iron Maiden</b> <img class ="name music" src="./assets/icons8-musical-15.png">
+            <b class="inscritos">2,25 mi de inscrito</b>
+
+            <b class="inscrever">INSCREVA-SE</b><br>
+
+            <b id="final-page"> The Official Video for Iron Maiden - Run TO The Hills</b>
+                <span class="final">Mostrar mais</span>
+
 
         </footer>
-
+            <br><br><br>
     </div>
 
 
+   l             <div align="center" class="marcadagua"> Made By Erick Sarges ©</div>
 </body>
 
 </html>
