add target blank no link

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
         <img src="./assets/icons8-tres-pontos.png" class="icons-inputs pontos" id="pontos">
 
+        <a href="./cadastro.html" target="_blank">
         <div id="login">
-
-            <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
+        <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
                <!-- nao esqucer de colocar o link -->
-            <b>FAZER LOGIN</b></div>
-
-        </div>
+            <b>CADASTRE-SE</b></div>
+            </div>
+        </a>
 
 
 
