--- a/cadastro.html
+++ b/cadastro.html
@@ -18,49 +18,56 @@
 
     <div class="conteiner">
 
+        <h2>Cadastro</h2>
+
         <form method="GET" action="">
-            <label for="username">Nome:</label>
+            <label for="username" class="nome">Nome:</label>
             <input type="text" nome="username" placeholder="Seu Nome" id="username"><br>
 
-            <label for="email">Email</label>
+            <label for="email" class="email">Email:</label>
             <input type="email" nome="email" placeholder="Email" id="email"><br>
 
-            <label for="senha">Senha</label>
+            <label for="senha" class="senha">Senha:</label>
             <input type="password" name="password" placeholder="Senha" id="senha"><br>
 
-            <label for="confirmar-senha">Confirmar-Senha</label>
+            <label for="confirmar-senha" class="confirmar-senha">Confirmar-Senha:</label>
             <input type="text" name="confirm-password" placeholder="Confirmar Senha" id="confirmar-senha"><br>
 
-            <label for="place"> Estado</label><br>
+            <label for="place" class="estado"> Estado:</label><br>
             <select name="Place" id="place">
                 <option value="" selected hidden disabled>Estado</option>
                 <option value="RJ">Rio de Janeiro</option>
                 <option value="SP">São Paulo</option>
                 <option value="PA">Pará</option>
                 <option value="BA">Bahia</option>
-                <option value="BH">Belo Horizonte</option>
+                <option value="MG">Minas Gerais</option>
                 <option value="ES">Espirito Santos</option>
 
             </select>
             <br>
 
-            <input type="radio" name="gender" value="M" checked>Masculino
-            <input type="radio" name="gender" value="F">Feminino
-            <input type="radio" name="gender" value="O">Outros
+                <span>Gênero:</span><br>
+            <input type="radio" name="gender" value="M" checked><b>Masculino</b>
+            <input type="radio" name="gender" value="F"><b>Feminino</b>
+            <input type="radio" name="gender" value="O"><b>Outros</b>
             <br>
 
-            <input type="radio" name="estado-civil" value="C">Casado
-            <input type="radio" name="estado-civil" value="S">Solteiro
+                <span>Estado Civil:</span><br>
+            <input type="radio" name="estado-civil" value="C"><b>Casado</b>
+            <input type="radio" name="estado-civil" value="S"><b>Solteiro</b>
             <br>
-            <input type="checkbox" name="Interesses" value="H">Homens
-            <input type="checkbox" name="Interesses" value="M">Mulheres
-            <input type="checkbox" name="Interesses" value="A">Aliens
+                <span> Interesses:</span><br>
+            <input type="checkbox" name="Interesses" value="H"><b>Homens</b>
+            <input type="checkbox" name="Interesses" value="M"><b>Mulheres</b>
+            <input type="checkbox" name="Interesses" value="A"><b>Aliens</b>
+            <input type="checkbox" name="Interesses" value="O"><b>Outros</b>
             <br>
+                            <span class="sobre-voce">Sobre você:</span><br>
+                    <textarea name="msg" id="" cols="30" rows="10"></textarea>
+                    <br>
+
             <input type="reset" value="Apagar">
             <input type="submit" value="Concluir">
-
-
-
 
         </form>
 
