melhoria de estrutura

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" href="./assets/icons8-reproduzir-youtube-40.png" type="image/png">
     <link rel="stylesheet" href="./CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="./CSS/MediaQueries.css" type="text/css">
 
 
     <title>I-Tube</title>
@@ -65,9 +66,12 @@
             <div class="icons">
                 <img src="./assets/icons8-polegar-para-cima.png" width="25px" alt="curtir"><b class="b">295MIL</b>
                 <img src="./assets/icons8-polegar-para-baixo.png" width="25px" alt="não gostei"><b class="b">NÃO GOSTEI</b>
-                <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b class="b">COMPARTILHAR</b>
 
+                <div id="compartilhar">
+                <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b class="b">COMPARTILHAR</b>
+                </div>
             </div>
+
 
                 </section>
 
@@ -91,7 +95,7 @@
     </div>
 
 
-   l             <div align="center" class="marcadagua"> Made By Erick Sarges ©</div>
+               <div align="center" class="marcadagua"> SargesCorporation©</div>
 </body>
 
 </html>
