--- a/cadastro.html
+++ b/cadastro.html
@@ -21,17 +21,17 @@
         <h2>Cadastro</h2>
 
         <form method="GET" action="">
-            <label for="username" class="nome">Nome:</label>
+            <label for="username" class="nome">Nome:</label><br>
             <input type="text" nome="username" placeholder="Seu Nome" id="username"><br>
 
-            <label for="email" class="email">Email:</label>
+            <label for="email" class="email">Email:</label><br>
             <input type="email" nome="email" placeholder="Email" id="email"><br>
 
-            <label for="senha" class="senha">Senha:</label>
+            <label for="senha" class="senha">Senha:</label><br>
             <input type="password" name="password" placeholder="Senha" id="senha"><br>
 
-            <label for="confirmar-senha" class="confirmar-senha">Confirmar-Senha:</label>
-            <input type="text" name="confirm-password" placeholder="Confirmar Senha" id="confirmar-senha"><br>
+            <label for="confirmar-senha" class="confirmar-senha">Confirmar-Senha:</label><br>
+            <input type="text" name="confirm-password"  id="confirmar-senha"><br>
 
             <label for="place" class="estado"> Estado:</label><br>
             <select name="Place" id="place">
@@ -46,25 +46,25 @@
             </select>
             <br>
 
-                <span>Gênero:</span><br>
+            <span>Gênero:</span><br>
             <input type="radio" name="gender" value="M" checked><b>Masculino</b>
             <input type="radio" name="gender" value="F"><b>Feminino</b>
             <input type="radio" name="gender" value="O"><b>Outros</b>
             <br>
 
-                <span>Estado Civil:</span><br>
+            <span>Estado Civil:</span><br>
             <input type="radio" name="estado-civil" value="C"><b>Casado</b>
             <input type="radio" name="estado-civil" value="S"><b>Solteiro</b>
             <br>
-                <span> Interesses:</span><br>
+            <span> Interesses:</span><br>
             <input type="checkbox" name="Interesses" value="H"><b>Homens</b>
             <input type="checkbox" name="Interesses" value="M"><b>Mulheres</b>
             <input type="checkbox" name="Interesses" value="A"><b>Aliens</b>
             <input type="checkbox" name="Interesses" value="O"><b>Outros</b>
             <br>
-                            <span class="sobre-voce">Sobre você:</span><br>
-                    <textarea name="msg" id="" cols="30" rows="10"></textarea>
-                    <br>
+            <span class="sobre-voce">Sobre você:</span><br>
+            <textarea name="msg" id="" cols="30" rows="10"></textarea>
+            <br>
 
             <input type="reset" value="Apagar">
             <input type="submit" value="Concluir">
