--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <img src="./assets/icons8-tres-pontos.png" class="icons-inputs pontos" id="pontos">
 
         <a href="./cadastro.html" target="_blank">
-        <div id="login">
-        <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
-               <!-- nao esqucer de colocar o link -->
-            <b>CADASTRE-SE</b></div>
+            <div id="login">
+                <div class="content"><img src="./assets/icons8-usuário-homem-com-círculo.png" id="perfil">
+                    <!-- nao esqucer de colocar o link -->
+                    <b>CADASTRE-SE</b>
+                </div>
             </div>
         </a>
 
@@ -51,13 +52,14 @@
 
     </header>
 
-    
+
     <div id="conteiner">
-               <!-- CONTEÚDO -->     
+        <!-- CONTEÚDO -->
         <section>
             <!-- VIDEO -->
 
-            <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="90%" controls poster="./images/iron_maiden.jpg" preload="auto"></video>
+            <video src="./assets/Iron Maiden - Run To The Hills (Official Video).mp4" width="90%" controls
+                poster="./images/iron_maiden.jpg" preload="auto"></video>
 
             <h3>Iron Maiden - Run To The Hills (Official Videos)</h3>
 
@@ -65,37 +67,40 @@
 
             <div class="icons">
                 <img src="./assets/icons8-polegar-para-cima.png" width="25px" alt="curtir"><b class="b">295MIL</b>
-                <img src="./assets/icons8-polegar-para-baixo.png" width="25px" alt="não gostei"><b class="b">NÃO GOSTEI</b>
+                <img src="./assets/icons8-polegar-para-baixo.png" width="25px" alt="não gostei"><b class="b">NÃO
+                    GOSTEI</b>
 
                 <div id="compartilhar">
-                <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b class="b">COMPARTILHAR</b>
+                    <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b
+                        class="b">COMPARTILHAR</b>
                 </div>
             </div>
 
 
-                </section>
+        </section>
 
 
 
-            
+
         <footer>
-                <!-- RODAPÉ -->
+            <!-- RODAPÉ -->
             <hr size="1px">
-            <img id="logo" src="./images/logo-iron.jpg" width="90px"><b class=" name iron">Iron Maiden</b> <img class ="name music" src="./assets/icons8-musical-15.png">
+            <img id="logo" src="./images/logo-iron.jpg" width="90px"><b class=" name iron">Iron Maiden</b> <img
+                class="name music" src="./assets/icons8-musical-15.png">
             <b class="inscritos">2,25 mi de inscrito</b>
 
             <b class="inscrever">INSCREVA-SE</b><br>
 
             <b id="final-page"> The Official Video for Iron Maiden - Run TO The Hills</b>
-                <span class="final">Mostrar mais</span>
+            <span class="final">Mostrar mais</span>
 
 
         </footer>
-            <br><br><br>
+        <br><br><br>
     </div>
 
 
-               <div align="center" class="marcadagua"> SargesCorporation©</div>
+    <div align="center" class="marcadagua"> SargesCorporation©</div>
 </body>
 
 </html>
