--- a/cadastro.html
+++ b/cadastro.html
@@ -31,7 +31,7 @@
             <input type="password" name="password" placeholder="Senha" id="senha"><br>
 
             <label for="confirmar-senha" class="confirmar-senha">Confirmar-Senha:</label><br>
-            <input type="text" name="confirm-password"  id="confirmar-senha"><br>
+            <input type="text" name="confirm-password"  id="confirmar-senha" placeholder="Confirmar Senha"><br>
 
             <label for="place" class="estado"> Estado:</label><br>
             <select name="Place" id="place">
