finalizado Media Querie da pagina

--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
                 <img src="./assets/icons8-polegar-para-baixo.png" width="25px" alt="não gostei"><b class="b">NÃO
                     GOSTEI</b>
 
-                <div id="compartilhar">
-                    <img src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b
-                        class="b">COMPARTILHAR</b>
-                </div>
+                    <img id="compartilhar" src="./assets/icons8-seta-para-compartilhar.png" width="30px" alt="compartilhar"><b
+                        class="b" id="t-compartilha">COMPARTILHAR</b>
+                
             </div>
 
 
