--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="./assets/icons8-reproduzir-youtube-40.png" type="image/png">
+    <link rel="icon" href="./assets/I-tube.png" type="image/png">
     <link rel="stylesheet" href="./CSS/style.css" type="text/css">
     <link rel="stylesheet" href="./CSS/MediaQueries.css" type="text/css">
 
