ajustes no posicionamento do cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="./assets/icons8-usuário-homem-com-círculo.png">
     <link rel="icon" href="./assets/icons8-reproduzir-youtube-40.png" type="image/png">
     <link rel="stylesheet" href="./CSS/cadastro.css" type="text/css">
 
