ajuste de estrutura

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <img src="./assets/icons8-lista.png" alt="list" width="25" id="list">
 
-        <img src="./assets/icons8-reproduzir-youtube-40.png" alt="youtube" id="youtube">
+        <img src="./assets/I-tube.png" alt="youtube" id="youtube">
         <span>YouTube</span> <sup>BR</sup>
 
         <form method="GET" action="https://www.youtube.com/results">
